umol-models-graph/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@molport_Molport-006-069-271.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C39N10O14S
      atom_count: 64
      bond_count: 68
      property_count: 3
molecule_lenient:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C39N10O14S
      atom_count: 64
      bond_count: 68
      property_count: 3
extended_molecule:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C39N10O14S
      atom_count: 64
      bond_count: 68
      extended_atoms: 0
      extended_bonds: 0
      property_count: 3
      rgroup_count: 0
      sgroup_count: 0
extended_molecule_lenient:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C39N10O14S
      atom_count: 64
      bond_count: 68
      extended_atoms: 0
      extended_bonds: 0
      property_count: 3
      rgroup_count: 0
      sgroup_count: 0
