umol-models-graph/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@oechem_peptide_pseudoatoms.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
molecule:
  success: false
  compound_count: 0
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 8, col 0"
molecule_lenient:
  success: false
  compound_count: 0
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 8, col 31"
extended_molecule:
  success: false
  compound_count: 0
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 8, col 31"
extended_molecule_lenient:
  success: false
  compound_count: 0
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 8, col 31"
